@@ -25,6 +25,7 @@
                target="14">
             <classpath refid="project.class.path"></classpath>
             <compilerarg line="--add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED" />
+            <compilerarg line="--add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED" />
             <compilerarg line="--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED" />
             <compilerarg line="--add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED" />
             <compilerarg line="--add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED" />
